--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,12 @@
 html {
-    background-color: white;
+    background-color: beige;
 }
+img {
+    height: 100vh;
+    width: 150vw;
+    position: relative;
+    text-align: center;
+}
+/* header {
+    background-image: url('https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fwww.pixelstalk.net%2Fwp-content%2Fuploads%2F2016%2F08%2FChalkboard-math-images-download.jpg&f=1&nofb=1');
+} */
