--- a/css/main.css
+++ b/css/main.css
@@ -1,12 +1,26 @@
 html {
     background-color: beige;
 }
-img {
-    height: 100vh;
-    width: 150vw;
-    position: relative;
+* {
+    padding: 2px;
+    margin: 2px;
+}
+.ceter-span {
     text-align: center;
 }
-/* header {
-    background-image: url('https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fwww.pixelstalk.net%2Fwp-content%2Fuploads%2F2016%2F08%2FChalkboard-math-images-download.jpg&f=1&nofb=1');
-} */
+h1, h2, h3 {
+    display: block;
+    text-align: center;
+}
+h1, h4, .quote {
+    font-weight: bold;
+}
+img {
+    text-align: center;
+    height: 250px;
+    width: 500px;
+    border: 2px solid rgb(199, 219, 199);
+}
+h2, h3, .list-group-item {
+    color: rgb(110, 109, 109);
+}
