--- a/css/main.css
+++ b/css/main.css
@@ -15,6 +15,9 @@ h1, h2, h3 {
 h1, h4, .quote {
     font-weight: bold;
 }
+h4 {
+    text-decoration: underline;
+}
 img {
     display: block;
     margin-left: auto;
