--- a/css/main.css
+++ b/css/main.css
@@ -53,3 +53,14 @@ h2, h3, .list-group-item {
 #more {
     text-align: center;
 }
+q {
+    font-weight: bold;
+}
+.modal-dialog{
+    position: relative;
+    display: table;
+    overflow-y: auto;    
+    overflow-x: auto;
+    width: auto;
+    min-width: 300px;   
+}
